--- a/welcometothejungle_webscraping.ipynb
+++ b/welcometothejungle_webscraping.ipynb
@@ -369,6 +369,79 @@
     "    print(\"----------------------------------------------------------\")\n",
     "    driver.quit()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Webscraping from *Google Jobs*\n",
+    "## Scraping using APIs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "def fetch_all_google_jobs_data(api_key, query, location, hl=\"en\", chips=None):\n",
+    "    \"\"\"\n",
+    "    Récupère les données de toutes les pages de l'API Google Jobs pour une recherche donnée.\n",
+    "\n",
+    "    Paramètres :\n",
+    "    api_key (str): Clé privée SerpApi.\n",
+    "    query (str): Requête de recherche.\n",
+    "    location (str, optionnel): Lieu géographique pour la recherche.\n",
+    "    hl (str): Langue pour la recherche.\n",
+    "    chips (list, optionnel): Conditions supplémentaires pour la requête.\n",
+    "\n",
+    "    Retourne :\n",
+    "    list: Toutes les réponses JSON analysées de l'API.\n",
+    "    \"\"\"\n",
+    "    all_results = []\n",
+    "    start = 0\n",
+    "    while True:\n",
+    "        # Paramètres pour la requête API\n",
+    "        params = {\n",
+    "            \"engine\": \"google_jobs\",\n",
+    "            \"q\": query,\n",
+    "            \"start\": start,\n",
+    "            \"hl\": hl,\n",
+    "            \"api_key\": api_key\n",
+    "        }\n",
+    "\n",
+    "        if location:\n",
+    "            params[\"location\"] = location\n",
+    "\n",
+    "        if chips:\n",
+    "            params[\"chips\"] = ','.join(chips)\n",
+    "\n",
+    "        # URL de base pour l'API Google Jobs\n",
+    "        base_url = \"https://serpapi.com/search.json\"\n",
+    "\n",
+    "        # Envoi d'une requête GET à l'API\n",
+    "        response = requests.get(base_url, params=params)\n",
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            all_results.append(data)\n",
+    "\n",
+    "            # Vérifier s'il y a encore des résultats\n",
+    "            if \"jobs_results\" not in data or not data[\"jobs_results\"]:\n",
+    "                break\n",
+    "\n",
+    "            start += 10  # Incrémenter pour la prochaine page\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    return all_results\n",
+    "\n",
+    "# Utilisation de la fonction\n",
+    "# The token is outdated\n",
+    "complete_data = fetch_all_google_jobs_data(\"65c15aeae94ce28a059108557e76ff428c362bd6550714533d91c1cf3c77f016\", \"Data Scientist\", \"Ile-De-France, France\")\n",
+    "print(\"DATA OUTPUT\", complete_data)"
+   ]
   }
  ],
  "metadata": {
