Scraping RSEs and application demo

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1241,6 +1241,9 @@
        "      <th>location</th>\n",
        "      <th>experience</th>\n",
        "      <th>technical_skills</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>score</th>\n",
+       "      <th>country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1251,6 +1254,9 @@
        "      <td>Anywhere</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[r, excel]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Anywhere</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1259,6 +1265,9 @@
        "      <td>Brussels, Belgium</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[r, git, python]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1267,6 +1276,9 @@
        "      <td>Anderlecht, Belgium</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[r, excel]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1275,6 +1287,9 @@
        "      <td>Waterloo, Belgium   (+2 others)</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[r, git, scala]</td>\n",
+       "      <td>51.</td>\n",
+       "      <td>72.9</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1283,9 +1298,15 @@
        "      <td>Brussels, Belgium</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[tensorflow, azure, r, databricks, sql server,...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1299,6 +1320,9 @@
        "      <td>Japan</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[tableau, r, excel, sql, powerbi, dash, scala,...</td>\n",
+       "      <td>17.</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>915</th>\n",
@@ -1307,6 +1331,9 @@
        "      <td>Japan</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[tableau, r, seaborn, matplotlib, pandas, exce...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>916</th>\n",
@@ -1315,6 +1342,9 @@
        "      <td>Tokyo, Japan</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[java, spark, azure, gcp, kafka, terraform, r,...</td>\n",
+       "      <td>29.</td>\n",
+       "      <td>74.3</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>917</th>\n",
@@ -1323,6 +1353,9 @@
        "      <td>Tsuruga, Fukui, Japan</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[r, excel]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>918</th>\n",
@@ -1331,10 +1364,13 @@
        "      <td>Tokyo, Japan</td>\n",
        "      <td>Non spécifié</td>\n",
        "      <td>[spark, kanban, kafka, r, airflow, elasticsear...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>919 rows × 5 columns</p>\n",
+       "<p>919 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1364,23 +1400,23 @@
        "917            Tsuruga, Fukui, Japan  Non spécifié   \n",
        "918                     Tokyo, Japan  Non spécifié   \n",
        "\n",
-       "                                      technical_skills  \n",
-       "0                                           [r, excel]  \n",
-       "1                                     [r, git, python]  \n",
-       "2                                           [r, excel]  \n",
-       "3                                      [r, git, scala]  \n",
-       "4    [tensorflow, azure, r, databricks, sql server,...  \n",
-       "..                                                 ...  \n",
-       "914  [tableau, r, excel, sql, powerbi, dash, scala,...  \n",
-       "915  [tableau, r, seaborn, matplotlib, pandas, exce...  \n",
-       "916  [java, spark, azure, gcp, kafka, terraform, r,...  \n",
-       "917                                         [r, excel]  \n",
-       "918  [spark, kanban, kafka, r, airflow, elasticsear...  \n",
+       "                                      technical_skills  rank score   country  \n",
+       "0                                           [r, excel]  None  None  Anywhere  \n",
+       "1                                     [r, git, python]  None  None   Belgium  \n",
+       "2                                           [r, excel]  None  None   Belgium  \n",
+       "3                                      [r, git, scala]   51.  72.9   Belgium  \n",
+       "4    [tensorflow, azure, r, databricks, sql server,...  None  None   Belgium  \n",
+       "..                                                 ...   ...   ...       ...  \n",
+       "914  [tableau, r, excel, sql, powerbi, dash, scala,...   17.  75.0     Japan  \n",
+       "915  [tableau, r, seaborn, matplotlib, pandas, exce...  None  None     Japan  \n",
+       "916  [java, spark, azure, gcp, kafka, terraform, r,...   29.  74.3     Japan  \n",
+       "917                                         [r, excel]  None  None     Japan  \n",
+       "918  [spark, kanban, kafka, r, airflow, elasticsear...  None  None     Japan  \n",
        "\n",
-       "[919 rows x 5 columns]"
+       "[919 rows x 8 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,19 +1451,19 @@
     "def process_skills(skills):\n",
     "    try:\n",
     "        skills_list = ast.literal_eval(skills)  \n",
-    "        return list(set(skill.strip().lower() for skill in skills_list))\n",
+    "        return list(set(skill.strip().capitalize() for skill in skills_list))\n",
     "    except (ValueError, SyntaxError):\n",
     "        return skills  \n",
     "\n",
     "offers_df['technical_skills'] = offers_df['technical_skills'].apply(process_skills)\n",
-    "offers_df['technical_skills'] = offers_df['technical_skills'].apply(lambda skills: [skill.lower() for skill in skills])\n",
+    "offers_df['country'] = offers_df['location'].apply(parse_country)\n",
     "\n",
     "offers_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1458,6 +1494,7 @@
        "      <th>technical_skills</th>\n",
        "      <th>rank</th>\n",
        "      <th>score</th>\n",
+       "      <th>country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1470,6 +1507,7 @@
        "      <td>[r, excel]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Anywhere</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1480,6 +1518,7 @@
        "      <td>[r, git, python]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1490,6 +1529,7 @@
        "      <td>[r, excel]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1500,6 +1540,7 @@
        "      <td>[r, git, scala]</td>\n",
        "      <td>51.</td>\n",
        "      <td>72.9</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1510,9 +1551,11 @@
        "      <td>[tensorflow, azure, r, databricks, sql server,...</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1530,6 +1573,7 @@
        "      <td>[tableau, r, excel, sql, powerbi, dash, scala,...</td>\n",
        "      <td>17.</td>\n",
        "      <td>75.0</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>915</th>\n",
@@ -1540,6 +1584,7 @@
        "      <td>[tableau, r, seaborn, matplotlib, pandas, exce...</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>916</th>\n",
@@ -1550,6 +1595,7 @@
        "      <td>[java, spark, azure, gcp, kafka, terraform, r,...</td>\n",
        "      <td>29.</td>\n",
        "      <td>74.3</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>917</th>\n",
@@ -1560,6 +1606,7 @@
        "      <td>[r, excel]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>918</th>\n",
@@ -1570,10 +1617,11 @@
        "      <td>[spark, kanban, kafka, r, airflow, elasticsear...</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>919 rows × 7 columns</p>\n",
+       "<p>919 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1603,23 +1651,23 @@
        "917            Tsuruga, Fukui, Japan  Non spécifié   \n",
        "918                     Tokyo, Japan  Non spécifié   \n",
        "\n",
-       "                                      technical_skills  rank score  \n",
-       "0                                           [r, excel]  None  None  \n",
-       "1                                     [r, git, python]  None  None  \n",
-       "2                                           [r, excel]  None  None  \n",
-       "3                                      [r, git, scala]   51.  72.9  \n",
-       "4    [tensorflow, azure, r, databricks, sql server,...  None  None  \n",
-       "..                                                 ...   ...   ...  \n",
-       "914  [tableau, r, excel, sql, powerbi, dash, scala,...   17.  75.0  \n",
-       "915  [tableau, r, seaborn, matplotlib, pandas, exce...  None  None  \n",
-       "916  [java, spark, azure, gcp, kafka, terraform, r,...   29.  74.3  \n",
-       "917                                         [r, excel]  None  None  \n",
-       "918  [spark, kanban, kafka, r, airflow, elasticsear...  None  None  \n",
+       "                                      technical_skills  rank score   country  \n",
+       "0                                           [r, excel]  None  None  Anywhere  \n",
+       "1                                     [r, git, python]  None  None   Belgium  \n",
+       "2                                           [r, excel]  None  None   Belgium  \n",
+       "3                                      [r, git, scala]   51.  72.9   Belgium  \n",
+       "4    [tensorflow, azure, r, databricks, sql server,...  None  None   Belgium  \n",
+       "..                                                 ...   ...   ...       ...  \n",
+       "914  [tableau, r, excel, sql, powerbi, dash, scala,...   17.  75.0     Japan  \n",
+       "915  [tableau, r, seaborn, matplotlib, pandas, exce...  None  None     Japan  \n",
+       "916  [java, spark, azure, gcp, kafka, terraform, r,...   29.  74.3     Japan  \n",
+       "917                                         [r, excel]  None  None     Japan  \n",
+       "918  [spark, kanban, kafka, r, airflow, elasticsear...  None  None     Japan  \n",
        "\n",
-       "[919 rows x 7 columns]"
+       "[919 rows x 8 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
