--- a/Notebook_Scrapping_Using_API.ipynb
+++ b/Notebook_Scrapping_Using_API.ipynb
@@ -1,31 +1,21 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "#API scrapping of all the pages of Google Jobs"
-      ],
       "metadata": {
         "id": "btCHDe_gpdwe"
-      }
+      },
+      "source": [
+        "#API scrapping of all the pages of Google Jobs"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 72,
+      "metadata": {
+        "id": "k7QBwtyrprxk"
+      },
+      "outputs": [],
       "source": [
         "import requests\n",
         "\n",
@@ -83,18 +73,11 @@
         "# Utilisation de la fonction\n",
         "# Remplacez 'your_api_key' par votre clé SerpApi rée\n",
         "complete_data = fetch_all_google_jobs_data(\"b384a7a8bd5ed660d935e64bc467147a6587986f9eeee21c92e5468fa37c0016\", \"Data\", \"Italy\")\n"
-      ],
-      "metadata": {
-        "id": "k7QBwtyrprxk"
-      },
-      "execution_count": 72,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "complete_data"
-      ],
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -102,10 +85,8 @@
         "id": "vwIw10pFhgJD",
         "outputId": "706ba982-9d30-4a8b-8467-9c828d7e8a01"
       },
-      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[{'search_metadata': {'id': '65ac3c6dc9de455e8ce489f0',\n",
@@ -4997,20 +4978,18 @@
               "  'error': \"Google hasn't returned any results for this query.\"}]"
             ]
           },
+          "execution_count": 51,
           "metadata": {},
-          "execution_count": 51
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "complete_data"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import requests\n",
-        "\n",
-        "payload = { 'api_key': '02c61b750bca71883a0e8dbb30c630b0', 'url': 'https://serpapi.com/search.json' }\n",
-        "r = requests.get('https://api.scraperapi.com/', params=payload)\n",
-        "print(r.text)\n"
-      ],
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5018,19 +4997,30 @@
         "id": "OrYPk7KBrX6i",
         "outputId": "76737739-1d74-4104-92ec-c2ba61718e7e"
       },
-      "execution_count": 42,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Request failed. You will not be charged for this request. Please make sure your url is correct and try the request again. If this continues to happen, please contact support@scraperapi.com. The domain may be protected, please try adding the premium=true OR ultra_premium=true parameter to your request.\n"
           ]
         }
+      ],
+      "source": [
+        "import requests\n",
+        "\n",
+        "payload = { 'api_key': '02c61b750bca71883a0e8dbb30c630b0', 'url': 'https://serpapi.com/search.json' }\n",
+        "r = requests.get('https://api.scraperapi.com/', params=payload)\n",
+        "print(r.text)\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {
+        "id": "1TL8GKrlcJC5"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "\n",
@@ -5093,7 +5083,7 @@
         "    \"Azure Data Factory\", \"Java\", \"VBA\", \"Matplotlib\", \"Seaborn\", \"Pandas\",\n",
         "    \"NumPy\", \"SciKit-Learn\", \"Streamlit\", \"Dash\", \"Shiny\", \"Flask\", \"Django\",\n",
         "    \"BigQuery\", \"Redshift\", \"PostgreSQL\", \"MySQL\", \"DB2\", \"SQLite\", \"MLflow\",\n",
-        "    \"Plotly\", \"Bokeh\", \"D3.js\", \"GraphQL\", \"REST API\", \"Microservices\"\n",
+        "    \"Plotly\", \"Bokeh\", \"D3.js\", \"GraphQL\", \"REST API\", \"Microservices\",\"Selenium\",\"BeautifulSoup\",\"java\"\n",
         "]\n",
         "\n",
         "\n",
@@ -5104,15 +5094,41 @@
         "    return found_skills if found_skills else [\"Non spécifié\"]\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "1TL8GKrlcJC5"
-      },
-      "execution_count": 61,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "zVSzVj8Wc7An",
+        "outputId": "1fa2c4b8-1c2d-4b41-954c-be7aa14691a3"
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/javascript": "\n    async function download(id, filename, size) {\n      if (!google.colab.kernel.accessAllowed) {\n        return;\n      }\n      const div = document.createElement('div');\n      const label = document.createElement('label');\n      label.textContent = `Downloading \"${filename}\": `;\n      div.appendChild(label);\n      const progress = document.createElement('progress');\n      progress.max = size;\n      div.appendChild(progress);\n      document.body.appendChild(div);\n\n      const buffers = [];\n      let downloaded = 0;\n\n      const channel = await google.colab.kernel.comms.open(id);\n      // Send a message to notify the kernel that we're ready.\n      channel.send({})\n\n      for await (const message of channel.messages) {\n        // Send a message to notify the kernel that we're ready.\n        channel.send({})\n        if (message.buffers) {\n          for (const buffer of message.buffers) {\n            buffers.push(buffer);\n            downloaded += buffer.byteLength;\n            progress.value = downloaded;\n          }\n        }\n      }\n      const blob = new Blob(buffers, {type: 'application/binary'});\n      const a = document.createElement('a');\n      a.href = window.URL.createObjectURL(blob);\n      a.download = filename;\n      div.appendChild(a);\n      a.click();\n      div.remove();\n    }\n  ",
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/javascript": "download(\"download_8b49823b-2136-4580-bbe0-ea1e35abfd7e\", \"google_jobs_data.csv\", 8762)",
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "from google.colab import files\n",
@@ -5148,88 +5164,11 @@
         "\n",
         "files.download('google_jobs_data.csv')\n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "id": "zVSzVj8Wc7An",
-        "outputId": "1fa2c4b8-1c2d-4b41-954c-be7aa14691a3"
-      },
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_8b49823b-2136-4580-bbe0-ea1e35abfd7e\", \"google_jobs_data.csv\", 8762)"
-            ]
-          },
-          "metadata": {}
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pandas"
-      ],
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5237,11 +5176,10 @@
         "id": "xV4lHH_EuOQp",
         "outputId": "eee3b1d5-6617-4732-8a7e-284b69bd1ca7"
       },
-      "execution_count": 43,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
@@ -5250,13 +5188,14 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install pandas"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "complete_data"
-      ],
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5264,22 +5203,46 @@
         "id": "0VvrX5nDr4PV",
         "outputId": "8307ef35-f9d6-4593-bb70-b739e310506e"
       },
-      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[]"
             ]
           },
+          "execution_count": 28,
           "metadata": {},
-          "execution_count": 28
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "complete_data"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        },
+        "id": "zhc_eGflc78b",
+        "outputId": "70d4e713-a914-4497-a51f-4f271c834f7d"
+      },
+      "outputs": [
+        {
+          "ename": "KeyError",
+          "evalue": "'jobs_results'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-ecf460c24d52>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mall_extracted_job_infos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcomplete_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mjob_infos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_job_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'jobs_results'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mall_extracted_job_infos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_infos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'jobs_results'"
+          ]
+        }
+      ],
       "source": [
         "all_extracted_job_infos = []\n",
         "for data in complete_data:\n",
@@ -5289,29 +5252,22 @@
         "# Affichage des informations extraites pour chaque emploi\n",
         "for job_info in all_extracted_job_infos:\n",
         "    print(job_info)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
-        },
-        "id": "zhc_eGflc78b",
-        "outputId": "70d4e713-a914-4497-a51f-4f271c834f7d"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "'jobs_results'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-ecf460c24d52>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mall_extracted_job_infos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcomplete_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mjob_infos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_job_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'jobs_results'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mall_extracted_job_infos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_infos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'jobs_results'"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
